--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -3,6 +3,8 @@
 body {
   font-family: "Proxima Nova Condensed", sans-serif;
   z-index: 1;
+  min-height: 100vh;
+  min-width: 100vw;
 
   &::before {
     z-index: -1;
@@ -12,17 +14,28 @@ body {
     content: "";
     background-image: url("/assets/images/bg_light.png");
     opacity: 0.1;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+  }
+
+  &.dark {
+    background-image: url("/assets/images/bg_dark.png");
+    &::before {
+      content: none;
+      background-image: none;
+      opacity: 1;
+    }
   }
 }
 
-.slide-enter-to, .slide-leave {
+.slide-enter-to,
+.slide-leave {
   max-height: 1000px;
   overflow: hidden;
 }
 
-.slide-enter, .slide-leave-to {
+.slide-enter,
+.slide-leave-to {
   overflow: hidden;
   max-height: 0;
 }
