moved shared logic to composible

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -20,6 +20,7 @@ body {
 
   &.dark {
     background-image: url("/assets/images/bg_dark.png");
+    background-size: cover;
     &::before {
       content: none;
       background-image: none;
